# susecon-beer-agent

./: .dockerignore  Cargo.toml  Dockerfile  README.md  ai-agent-config.yaml
.github/workflows/: build.yaml
charts/beer-mcp/: Chart.yaml  values.yaml
charts/beer-mcp/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/susecon-beer-agent/: Chart.yaml  values.yaml
charts/susecon-beer-agent/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
src/: main.rs  rancher_auth.rs
